Prevent long code lines from overflowing when Prism isnt invoked
Former-commit-id: 0c9cbb4db3d74bc26594bc997c5a42cd2e978fb8

--- a/styles/components/blocks/code.scss
+++ b/styles/components/blocks/code.scss
@@ -2,6 +2,7 @@
   width: calc(100%);
   position: relative !important;
   margin: 1.75em auto;
+  overflow-x: auto;
 
   .code-toolbar {
     position: relative;
